<resources>
    <string name="app_name">Shop Digital</string>
    <string name="login">ورود کاربران</string>
    <string name="enter_user">نام کاربری</string>
    <string name="enter_password">رمز عبور</string>
    <string name="login_user">ورود</string>
    <string name="sign_up">ثبت نام</string>
    <string name="enter_password_replace">تکرار رمز عبور</string>
    <string name="back">انصراف</string>
    <string name="exit">خروج</string>
    <string name="error_password">رمز عبور باید بیش از هشت کاراکتر باشد</string>
    <string name="error_username">نام کاربری باید بیش از پنج کاراکتر باشد</string>
    <string name="empty_field">لطفا فیلد را پر کنید</string>
    <string name="password_checked">مقدار فیلد های رمز عبور باید یکسان باشد</string>
    <string name="user_pass">نام کاربری یا رمز عبور اشتباه است!</string>
    <string name="no_username">کاربری با این نام وجود ندارد</string>
    <string name="loptop">لپ تاپ</string>
    <string name="mobile">موبایل</string>
    <string name="laptop">لپ تاپ</string>
    <string name="camera">دوربین</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">صفحه اصلی</string>
    <string name="account">حساب کاربری</string>
    <string name="search">جستجو</string>
    <string name="category"> دسته بندی</string>
    <string name="cart">سبد خرید</string>
    <string name="most_seen">پربازدیدها</string>
    <string name="latest_product">محصولات اخیر</string>
</resources>