<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SplashActivity"
    android:orientation="vertical"
    android:background="@color/gray">
    <TextView
        android:id="@+id/txtSplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/btitr"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_margin="15dp"/>

    <ImageView
        android:id="@+id/imgSplash"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginTop="110dp"
        android:scaleType="fitXY"
        android:src="@drawable/store"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnSplashLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/background_btn"
        android:fontFamily="@font/btitr"
        android:gravity="center"
        android:text="@string/login_user"
        android:textSize="22dp" />

    <Button
        android:id="@+id/btnSplashSingUp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/sign_up"
        android:gravity="center"
        android:textColor="@color/blue"
        android:fontFamily="@font/btitr"
        android:textSize="22dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_btn2"/>

</LinearLayout>