<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/login"
                android:fontFamily="@font/btitr"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgLogin"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="144dp"
                android:background="@drawable/circle"
                android:src="@drawable/ic_person2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtUserNameLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="60dp"
                android:backgroundTint="@android:color/white"
                android:drawableEnd="@drawable/ic_person"
                android:drawablePadding="8dp"
                android:fontFamily="@font/bkoodak"
                android:gravity="right"
                android:hint="@string/enter_user"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgLogin" />

            <TextView
                android:id="@+id/txtErrorUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/error_username"
                android:textColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.809"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtUserNameLogin" />

            <EditText
                android:id="@+id/edtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@android:color/white"
                android:drawableEnd="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/bkoodak"
                android:gravity="end"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtErrorUserName" />

            <TextView
                android:id="@+id/txtErrorPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/error_password"
                android:textColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.809"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtPasswordLogin" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="@drawable/background_btn2"
                android:fontFamily="@font/btitr"
                android:text="@string/login_user"
                android:textColor="@color/blue"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtErrorPassword" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="@drawable/background_btn2"
                android:fontFamily="@font/btitr"
                android:text="@string/exit"
                android:textColor="@color/blue"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>