<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtBackground"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/login"
                android:fontFamily="@font/btitr"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgSingUp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="144dp"
                android:background="@drawable/circle"
                android:src="@drawable/ic_person2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtUserNameSingUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@android:color/white"
                android:drawableEnd="@drawable/ic_person"
                android:drawablePadding="8dp"
                android:fontFamily="@font/bkoodak"
                android:gravity="right"
                android:hint="@string/enter_user"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgSingUp" />

            <TextView
                android:id="@+id/txtErrorUserNameSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/error_username"
                android:textColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.809"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtUserNameSingUp" />

            <EditText
                android:id="@+id/edtPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@android:color/white"
                android:drawableEnd="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/bkoodak"
                android:gravity="end"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtUserNameSingUp" />

            <TextView
                android:id="@+id/txtErrorPasswordSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/error_password"
                android:textColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.809"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtPasswordSignUp" />

            <EditText
                android:id="@+id/edtPasswordReplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/white"
                android:drawableEnd="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/bkoodak"
                android:gravity="end"
                android:hint="@string/enter_password_replace"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtPasswordSignUp" />

            <TextView
                android:id="@+id/txtErrorPasswordReplaceSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/error_password"
                android:textColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.809"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtPasswordReplace" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/background_btn2"
                android:fontFamily="@font/bkoodak"
                android:text="@string/sign_up"
                android:textColor="@color/blue"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtErrorPasswordReplaceSignUp" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="25dp"
                android:background="@drawable/background_btn"
                android:fontFamily="@font/bkoodak"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSignUp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>